# micro-swiss

./: Cargo.toml  README.md  build.rs
src/: main.rs  module_registry.rs  tool_module.rs
src/modules/: mod.rs
src/modules/base64_encode/: mod.rs
src/modules/case_convert/: mod.rs
src/modules/checksum/: mod.rs
src/modules/color_convert/: mod.rs
src/modules/convert_to_branch/: mod.rs
src/modules/date_calc/: mod.rs
src/modules/db_connect/: mod.rs
src/modules/file_size/: mod.rs
src/modules/flatten_text/: mod.rs
src/modules/hash/: mod.rs
src/modules/json_format/: mod.rs
src/modules/password_gen/: mod.rs
src/modules/qr_generate/: mod.rs
src/modules/regex_test/: mod.rs
src/modules/run_file/: mod.rs
src/modules/url_encode/: mod.rs
src/modules/url_parse/: mod.rs
src/modules/uuid_generate/: mod.rs
