[package]
name = "micro-swiss"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "micro-swiss"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
arboard = "3.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
md5 = "0.8.0"
sha2 = "0.10.9"
qrcode = "0.14.1"
regex = "1.11.2"
uuid = { version = "1.18.1", features = ["v4", "v7"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
csv = "1.3"
